syntax = "proto3";


option java_multiple_files = true;
option java_package = "io.spine";
option java_outer_classname = "GreeterProto";
option objc_class_prefix = "HLW";

package io.spine;

// The greeting service.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  // Sends a greeting and gets lots of replies.
  rpc ServerTalking (HelloRequest) returns (stream HelloReply);

  // Sends lots of greetings and get a single reply.
  rpc ClientTalking (stream HelloRequest) returns (HelloReply);

  // Sends lots of greetings and receives lots of replies.
  rpc TalkingTogether(stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
